--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,38 @@
-version: "3"
+version: '3'
 services:
+
   mariadb:
     image: "mariadb:10.1.16"
     expose:
       - 3306
-    env_file: "./.env"
     environment:
-      MYSQL_ROOT_PASSWORD: "${SEQUELIZE_PASSWORD}"
-      MYSQL_USER: "${SEQUELIZE_USERNAME}"
-      MYSQL_PASSWORD: "${SEQUELIZE_PASSWORD}"
-      MYSQL_DATABASE: "${SEQUELIZE_DATABASE}"
+      MYSQL_ROOT_PASSWORD: "admin"
+      MYSQL_USER: "test"
+      MYSQL_PASSWORD: "test"
+      MYSQL_DATABASE: "test"
 
   web:
     build: .
+    command: npm run debug
     depends_on:
-      - mariadb
+        - mariadb
+    volumes:
+      - ./build:/server/build
     ports:
       - "0.0.0.0:3000:3000"
       - "0.0.0.0:5858:5858"
-    env_file: "./.env"
     environment:
-      SEQUELIZE_HOST: mariadb
+      TYPEORM_CONNECTION: "mariadb"
+      TYPEORM_HOST: mariadb
+      TYPEORM_USERNAME: "test"
+      TYPEORM_PASSWORD: "test"
+      TYPEORM_DATABASE: "test"
+      TYPEORM_PORT: 3306
+      TYPEORM_SYNCHRONIZE: 1
+      TYPEORM_LOGGING: 1
+      TYPEORM_ENTITIES: "build/entity/**/*.js"
+      TYPEORM_MIGRATIONS: "build/migration/**/*.js"
+      TYPEORM_SUBSCRIBERS: "build/subscriber/**/*.js"
+      TYPEORM_ENTITIES_DIR: "build/entity"
+      TYPEORM_MIGRATIONS_DIR: "build/migration"
+      TYPEORM_SUBSCRIBERS_DIR: "build/subscriber"
