--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-   "name": "chat-backend",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "devDependencies": {
-      "@types/bcrypt": "^3.0.0",
-      "@types/express": "^4.17.3",
-      "@types/jsonwebtoken": "^8.3.8",
-      "@types/node": "^8.0.29",
-      "@types/socket.io": "^2.1.4",
-      "@types/uuid": "^7.0.0",
-      "@typescript-eslint/eslint-plugin": "^2.23.0",
-      "@typescript-eslint/parser": "^2.23.0",
-      "eslint": "^6.8.0",
-      "eslint-config-airbnb-base": "^14.1.0",
-      "eslint-plugin-import": "^2.20.1",
-      "nodemon": "^2.0.2",
-      "ts-node": "3.3.0",
-      "typescript": "^3.3.3333"
-   },
-   "dependencies": {
-      "bcrypt": "^4.0.1",
-      "body-parser": "^1.18.1",
-      "debug": "^4.1.1",
-      "dotenv": "^8.2.0",
-      "express": "^4.15.4",
-      "jsonwebtoken": "^8.5.1",
-      "mysql": "^2.14.1",
-      "reflect-metadata": "^0.1.10",
-      "socket.io": "^2.3.0",
-      "typeorm": "0.2.24",
-      "uuid": "^7.0.2"
-   },
-   "scripts": {
-      "build": "tsc -p ./",
-      "start": "node ./build/index.js",
-      "dev-start": "ts-node src/index.ts",
-      "tsc-watch": "tsc -w -p ./",
-      "debug": "nodemon --legacy-watch --watch ./build --inspect=0.0.0.0:5858 --nolazy ./build/index.js",
-      "local-watch": "nodemon --watch \"./src/**/*.ts\" --ignore \"./src/**/*.spec.ts\" --exec ts-node src/index.ts",
-      "local-debug": "nodemon --watch \"./src/**/*.ts\" --ignore \"./src/**/*.spec.ts\" --inspect=0.0.0.0:5858 --exec ts-node src/index.ts",
-      "docker-run": "docker-compose up"
-   }
+    "name": "chat-backend",
+    "version": "0.0.1",
+    "description": "Awesome project developed with TypeORM.",
+    "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/express": "^4.17.3",
+        "@types/jsonwebtoken": "^8.3.8",
+        "@types/node": "^8.0.29",
+        "@types/socket.io": "^2.1.4",
+        "@types/uuid": "^7.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.23.0",
+        "@typescript-eslint/parser": "^2.23.0",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-base": "^14.1.0",
+        "eslint-plugin-import": "^2.20.1",
+        "nodemon": "^2.0.2",
+        "pm2": "^4.2.3",
+        "ts-node": "3.3.0",
+        "typescript": "^3.3.3333"
+    },
+    "dependencies": {
+        "bcrypt": "^4.0.1",
+        "body-parser": "^1.18.1",
+        "debug": "^4.1.1",
+        "dotenv": "^8.2.0",
+        "express": "^4.15.4",
+        "jsonwebtoken": "^8.5.1",
+        "mysql": "^2.14.1",
+        "reflect-metadata": "^0.1.10",
+        "socket.io": "^2.3.0",
+        "typeorm": "0.2.24",
+        "uuid": "^7.0.2"
+    },
+    "scripts": {
+        "build": "tsc -p ./",
+        "start": "node ./build/index.js",
+        "deploy": "pm2 deploy ecosystem.config.js production setup",
+        "dev-start": "ts-node src/index.ts",
+        "tsc-watch": "tsc -w -p ./",
+        "watch": "nodemon --legacy-watch --watch ./build --nolazy ./build/index.js",
+        "debug": "nodemon --legacy-watch --watch ./build --inspect=0.0.0.0:5858 --nolazy ./build/index.js",
+        "local-watch": "nodemon --watch \"./src/**/*.ts\" --ignore \"./src/**/*.spec.ts\" --exec ts-node src/index.ts",
+        "local-debug": "nodemon --watch \"./src/**/*.ts\" --ignore \"./src/**/*.spec.ts\" --inspect=0.0.0.0:5858 --exec ts-node src/index.ts",
+        "docker-run": "docker-compose up"
+    }
 }
