--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
 
   web:
     build: .
-    command: npm run watch
     depends_on:
         - mariadb
     ports:
       - "0.0.0.0:3000:3000"
       - "0.0.0.0:5858:5858"
     env_file: ".env"
+    restart: always
     environment:
       TYPEORM_CONNECTION: "mariadb"
       TYPEORM_HOST: mariadb
