add petsqui api support/new conversations feature

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "mysql": "^2.14.1",
         "reflect-metadata": "^0.1.10",
         "socket.io": "^2.3.0",
+        "typed-rest-client": "^1.7.3",
         "typeorm": "0.2.24",
         "uuid": "^7.0.2"
     },
