--- a/.editorconfig
+++ b/.editorconfig
@@ -3,12 +3,11 @@ indent_style = space
 trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
-
-[*.ts, *.js]
 indent_size = 2
 
-[*.json]
+[*.json][*]
+indent_style = space
+trim_trailing_whitespace = true
+end_of_line = lf
+insert_final_newline = true
 indent_size = 4
-
-[*.yml]
-indent_size = 2
