--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - "0.0.0.0:5858:5858"
     env_file: ".env"
     restart: always
+    environment:
+      TYPEORM_HOST: mariadb
 
 volumes:
   mysql-volume:
