--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,20 @@ services:
     env_file: ".env"
     restart: always
     environment:
+      TYPEORM_CONNECTION: "mariadb"
       TYPEORM_HOST: mariadb
+      TYPEORM_USERNAME: "test"
+      TYPEORM_PASSWORD: "test"
+      TYPEORM_DATABASE: "test"
+      TYPEORM_PORT: 3306
+      TYPEORM_SYNCHRONIZE: 1
+      TYPEORM_LOGGING: 1
+      TYPEORM_ENTITIES: "build/entity/**/*.js"
+      TYPEORM_MIGRATIONS: "build/migration/**/*.js"
+      TYPEORM_SUBSCRIBERS: "build/subscriber/**/*.js"
+      TYPEORM_ENTITIES_DIR: "build/entity"
+      TYPEORM_MIGRATIONS_DIR: "build/migration"
+      TYPEORM_SUBSCRIBERS_DIR: "build/subscriber"
 
 volumes:
   mysql-volume:
