--- a/.env.dist
+++ b/.env.dist
@@ -11,7 +11,8 @@ TYPEORM_PASSWORD=test
 TYPEORM_DATABASE=test
 TYPEORM_PORT=3306
 TYPEORM_SYNCHRONIZE=true
-TYPEORM_LOGGING=true
+TYPEORM_LOGGING=error
+TYPEORM_LOGGER=debug
 TYPEORM_ENTITIES=build/entity/**/*.js
 TYPEORM_MIGRATIONS=build/migration/**/*.js
 TYPEORM_SUBSCRIBERS=build/subscriber/**/*.js
