fix unicode issue

--- a/.env.dist
+++ b/.env.dist
@@ -19,3 +19,4 @@ TYPEORM_SUBSCRIBERS=build/subscriber/**/*.js
 TYPEORM_ENTITIES_DIR=build/entity
 TYPEORM_MIGRATIONS_DIR=build/migration
 TYPEORM_SUBSCRIBERS_DIR=build/subscriber
+TYPEORM_DRIVER_EXTRA={"charset":"UTF8MB4_GENERAL_CI"}
