--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
     "description": "Awesome project developed with TypeORM.",
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
-        "@types/express": "^4.17.3",
-        "@types/jsonwebtoken": "^8.3.8",
-        "@types/node": "^8.0.29",
-        "@types/socket.io": "^2.1.4",
-        "@types/uuid": "^7.0.0",
-        "@typescript-eslint/eslint-plugin": "^2.23.0",
-        "@typescript-eslint/parser": "^2.23.0",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb-base": "^14.1.0",
-        "eslint-plugin-import": "^2.20.1",
-        "nodemon": "^2.0.2",
-        "pm2": "^4.2.3",
-        "ts-node": "3.3.0",
-        "typescript": "^3.3.3333"
+        "@types/express": "^4.17.7",
+        "@types/jsonwebtoken": "^8.5.0",
+        "@types/node": "^14.0.23",
+        "@types/socket.io": "^2.1.8",
+        "@types/uuid": "^8.0.0",
+        "@typescript-eslint/eslint-plugin": "^3.6.1",
+        "@typescript-eslint/parser": "^3.6.1",
+        "eslint": "^7.4.0",
+        "eslint-config-airbnb-base": "^14.2.0",
+        "eslint-plugin-import": "^2.22.0",
+        "nodemon": "^2.0.4",
+        "pm2": "^4.4.0",
+        "ts-node": "8.10.2",
+        "typescript": "^3.9.6"
     },
     "dependencies": {
-        "bcrypt": "^4.0.1",
-        "body-parser": "^1.18.1",
+        "bcrypt": "^5.0.0",
+        "body-parser": "^1.19.0",
         "debug": "^4.1.1",
         "dotenv": "^8.2.0",
-        "express": "^4.15.4",
+        "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
-        "mysql": "^2.14.1",
-        "reflect-metadata": "^0.1.10",
+        "mysql": "^2.18.1",
+        "reflect-metadata": "^0.1.13",
         "socket.io": "^2.3.0",
         "typed-rest-client": "^1.7.3",
-        "typeorm": "0.2.24",
-        "uuid": "^7.0.2"
+        "typeorm": "0.2.25",
+        "uuid": "^8.2.0"
     },
     "scripts": {
         "build": "tsc -p ./",
@@ -42,7 +42,7 @@
         "watch": "pm2 start ./build/index.js --no-daemon",
         "debug": "nodemon --legacy-watch --watch ./build --inspect=0.0.0.0:5858 --nolazy ./build/index.js",
         "local-watch": "nodemon --watch \"./src/**/*.ts\" --ignore \"./src/**/*.spec.ts\" --exec ts-node src/index.ts",
-        "local-debug": "nodemon --watch \"./src/**/*.ts\" --ignore \"./src/**/*.spec.ts\" --inspect=0.0.0.0:5858 --exec ts-node src/index.ts",
+        "local-debug": "nodemon --watch \"./src/**/*.ts\" --ignore \"./src/**/*.spec.ts\" --exec ts-node src/index.ts --inspect=0.0.0.0:5858",
         "docker-run": "docker-compose up"
     }
 }
