--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: '3'
 services:
 
   mariadb:
-    image: "mariadb:10.1.16"
+    image: "mariadb:10.5.8"
+    ports:
+      - "0.0.0.0:3307:3306"
     expose:
       - 3306
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --init-connect='SET NAMES UTF8mb4;' --innodb-flush-log-at-trx-commit=0
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --innodb-flush-log-at-trx-commit=0
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: "admin"
