--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
     "description": "Awesome project developed with TypeORM.",
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
-        "@types/express": "^4.17.7",
+        "@types/express": "4.17.11",
         "@types/jsonwebtoken": "^8.5.0",
-        "@types/node": "^14.0.23",
-        "@types/socket.io": "^2.1.8",
-        "@types/uuid": "^8.0.0",
-        "@typescript-eslint/eslint-plugin": "^3.6.1",
-        "@typescript-eslint/parser": "^3.6.1",
-        "eslint": "^7.4.0",
-        "eslint-config-airbnb-base": "^14.2.0",
-        "eslint-plugin-import": "^2.22.0",
-        "nodemon": "^2.0.4",
-        "pm2": "^4.4.0",
-        "ts-node": "8.10.2",
-        "typescript": "^3.9.6"
+        "@types/node": "^14.14.22",
+        "@types/socket.io": "^2.1.12",
+        "@types/uuid": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^4.14.0",
+        "@typescript-eslint/parser": "^4.14.0",
+        "eslint": "^7.18.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1",
+        "nodemon": "^2.0.7",
+        "pm2": "^4.5.1",
+        "ts-node": "9.1.1",
+        "typescript": "^4.1.3"
     },
     "dependencies": {
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
-        "debug": "^4.1.1",
+        "debug": "^4.3.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
         "reflect-metadata": "^0.1.13",
-        "socket.io": "^2.3.0",
-        "typed-rest-client": "^1.7.3",
-        "typeorm": "0.2.25",
-        "uuid": "^8.2.0"
+        "socket.io": "^3.1.0",
+        "typed-rest-client": "^1.8.0",
+        "typeorm": "0.2.30",
+        "uuid": "^8.3.2"
     },
     "scripts": {
         "build": "tsc -p ./",
