--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -6,8 +6,8 @@ services:
     expose:
       - 3306
     ports:
-      - "0.0.0.0:3306:3306"
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --init-connect='SET NAMES UTF8mb4;' --innodb-flush-log-at-trx-commit=0
+      - "0.0.0.0:3307:3306"
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --innodb-flush-log-at-trx-commit=0
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: "admin"
