--- a/.env.dist
+++ b/.env.dist
@@ -20,3 +20,6 @@ TYPEORM_ENTITIES_DIR=build/entity
 TYPEORM_MIGRATIONS_DIR=build/migration
 TYPEORM_SUBSCRIBERS_DIR=build/subscriber
 TYPEORM_DRIVER_EXTRA={"charset":"UTF8MB4_GENERAL_CI"}
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
