--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       MYSQL_USER: "test"
       MYSQL_PASSWORD: "test"
       MYSQL_DATABASE: "test"
+  redis:
+    image: "redis:alpine"
+    expose:
+      - 6379
 
   web:
     build: .
@@ -24,6 +28,8 @@ services:
     env_file: ".env"
     restart: always
     environment:
+      REDIS_HOST: "redis"
+      REDIS_PORT: 6379
       TYPEORM_CONNECTION: "mariadb"
       TYPEORM_HOST: mariadb
       TYPEORM_USERNAME: "test"
