--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "mysql": "^2.18.1",
         "reflect-metadata": "^0.1.13",
         "socket.io": "^3.1.0",
+        "socket.io-redis": "^6.0.1",
         "typed-rest-client": "^1.8.0",
         "typeorm": "0.2.30",
         "uuid": "^8.3.2"
