--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.22.1",
         "nodemon": "^2.0.7",
-        "pm2": "^4.5.4",
+        "pm2": "^4.5.5",
         "ts-node": "9.1.1",
-        "typescript": "^4.1.3"
+        "typescript": "^4.2.3"
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
@@ -26,13 +26,14 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
-        "mysql": "^2.18.1",
+        "mysql": "2.18.1",
+        "patch-package": "^6.4.6",
         "pg": "^8.5.1",
         "reflect-metadata": "^0.1.13",
         "socket.io": "^3.1.1",
         "socket.io-redis": "^6.0.1",
         "typed-rest-client": "^1.8.3",
-        "typeorm": "0.2.31",
+        "typeorm": "0.2.25",
         "uuid": "^8.3.2"
     },
     "scripts": {
