--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,20 @@
 version: '3'
 services:
 
-  mariadb:
-    image: "mariadb:10.5.8"
-    ports:
-      - "0.0.0.0:3307:3306"
-    expose:
-      - 3306
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --innodb-flush-log-at-trx-commit=0
-    restart: always
+  postgres:
+    image: postgres:12.5-alpine
     environment:
-      MYSQL_ROOT_PASSWORD: "admin"
-      MYSQL_USER: "test"
-      MYSQL_PASSWORD: "test"
-      MYSQL_DATABASE: "test"
+      - POSTGRES_PASSWORD=${TYPEORM_PASSWORD}
+      - POSTGRES_DB=${TYPEORM_DATABASE}
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data/pgdata
+    ports:
+      - '${TYPEORM_PORT}:${TYPEORM_PORT}'
+    expose:
+      - ${TYPEORM_PORT}
+    command: -p ${TYPEORM_PORT}
+    restart: always
   redis:
     image: "redis:alpine"
     expose:
@@ -22,19 +23,21 @@ services:
   web:
     build: .
     depends_on:
-        - mariadb
+        - postgres
     ports:
-      - "0.0.0.0:3000:3000"
+      - "0.0.0.0:3001:3001"
     env_file: ".env"
     restart: always
+    volumes:
+      - ./build:/server/build
     environment:
       REDIS_HOST: "redis"
       REDIS_PORT: 6379
-      TYPEORM_CONNECTION: "mariadb"
-      TYPEORM_HOST: mariadb
-      TYPEORM_USERNAME: "test"
-      TYPEORM_PASSWORD: "test"
-      TYPEORM_DATABASE: "test"
-      TYPEORM_PORT: 3306
+      TYPEORM_CONNECTION: "postgres"
+      TYPEORM_HOST: postgres
+      TYPEORM_USERNAME: "postgres"
+      TYPEORM_PASSWORD: ${TYPEORM_PASSWORD}
+      TYPEORM_DATABASE: ${TYPEORM_DATABASE}
+      TYPEORM_PORT: ${TYPEORM_PORT}
       TYPEORM_SYNCHRONIZE: 1
 
