--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
     "version": "0.0.2",
     "description": "Awesome project developed with TypeORM.",
     "devDependencies": {
-        "@types/bcrypt": "^3.0.0",
-        "@types/express": "4.17.12",
-        "@types/jsonwebtoken": "^8.5.1",
-        "@types/node": "^14.14.34",
-        "@types/socket.io": "^2.1.13",
-        "@types/uuid": "^8.3.0",
-        "@typescript-eslint/eslint-plugin": "^4.26.1",
-        "@typescript-eslint/parser": "^4.26.1",
-        "eslint": "^7.28.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.4",
+        "@types/node": "^16.0.1",
+        "@types/socket.io": "^3.0.2",
+        "@types/uuid": "^8.3.1",
+        "@typescript-eslint/eslint-plugin": "^4.28.2",
+        "@typescript-eslint/parser": "^4.28.2",
+        "eslint": "^7.30.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.23.4",
-        "nodemon": "^2.0.7",
-        "pm2": "^4.5.5",
-        "ts-node": "9.1.1",
-        "typescript": "^4.3.2"
+        "nodemon": "^2.0.9",
+        "pm2": "^5.1.0",
+        "ts-node": "10.0.0",
+        "typescript": "^4.3.5"
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
-        "debug": "^4.3.1",
-        "dotenv": "^8.2.0",
+        "debug": "^4.3.2",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "patch-package": "^6.4.7",
         "pg": "^8.6.0",
         "reflect-metadata": "^0.1.13",
-        "socket.io": "^3.1.1",
+        "socket.io": "^3.1.2",
         "socket.io-redis": "^6.1.1",
         "typed-rest-client": "^1.8.4",
         "typeorm": "0.2.34",
@@ -38,7 +38,6 @@
     "scripts": {
         "build": "tsc -p ./",
         "start": "node ./build/index.js",
-        "deploy": "pm2 deploy ecosystem.config.js production setup",
         "dev-start": "ts-node src/index.ts",
         "tsc-watch": "tsc -w -p ./",
         "watch": "pm2 start ./build/index.js --no-daemon",
